# comfyui-eagle-dynamic-host

./: README.md  README_JP.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
api/: eagle_api.py
nodes/: eagle_feeder_animated_webp.py  eagle_feeder_mp4.py  eagle_feeder_png.py
tests/: test_eagle_api.py
web/js/: eagle_feeder_defaults.js
